# agenttap

./: .gitignore  README.md  pyproject.toml
src/agenttap/: __init__.py  tap.py
tests/: test_tap.py
