[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttap"
version = "0.1.0"
description = "Wire-level prompt introspection for LLM SDK calls. See exactly what was sent, with credentials redacted by default. Anthropic, OpenAI, any httpx-based client."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "MukundaKatta" }]
requires-python = ">=3.10"
keywords = ["llm", "anthropic", "openai", "debug", "introspection", "prompt", "httpx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agenttap"
Issues = "https://github.com/MukundaKatta/agenttap/issues"
Repository = "https://github.com/MukundaKatta/agenttap"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
